Kubernetes/Helm/aulas/k8s_files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops
  annotations:
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: giropops.eastus.cloudapp.azure.com 
    http:
      paths:
      - backend:
          service:
            name: giropops
            port:
              number: 80
        path: /
        pathType: Exact
